--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <div class="header"></div>
   
           <div class="idCard_content">
-              <img src="/Images/photo1704729321.png" id="bg_image" alt="bgimg"/>  
+              <img src="./Images/photo1704729321.png" id="bg_image" alt="bgimg"/>  
               <div class="details">
                   <span class="details__content"
                 >Name <input id="name" class="input_field" />
