--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 <!-- Add this before the closing </body> tag -->
 <script src="https://rawgit.com/eKoopmans/html2pdf/master/dist/html2pdf.bundle.js"></script>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.7.4/jspdf.plugin.autotable.min.js"></script>
+
+
   </head>
   <body>
     <div class="container">
