--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="CSS/Style.css" />
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
 
 <!-- Add this before the closing </body> tag -->
 <script src="https://rawgit.com/eKoopmans/html2pdf/master/dist/html2pdf.bundle.js"></script>
